logs/8013.log
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Scripts\uvicorn.exe\__main__.py", line 7, in <module>
    sys.exit(main())
             ~~~~^^
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\click\core.py", line 1485, in __call__
    return self.main(*args, **kwargs)
           ~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\click\core.py", line 1406, in main
    rv = self.invoke(ctx)
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\click\core.py", line 1269, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\click\core.py", line 824, in invoke
    return callback(*args, **kwargs)
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\uvicorn\main.py", line 433, in main
    run(
    ~~~^
        app,
        ^^^^
    ...<47 lines>...
        h11_max_incomplete_event_size=h11_max_incomplete_event_size,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\uvicorn\main.py", line 606, in run
    server.run()
    ~~~~~~~~~~^^
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\uvicorn\server.py", line 75, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\asyncio\runners.py", line 195, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\asyncio\base_events.py", line 725, in run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\uvicorn\server.py", line 79, in serve
    await self._serve(sockets)
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\uvicorn\server.py", line 86, in _serve
    config.load()
    ~~~~~~~~~~~^^
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\uvicorn\config.py", line 441, in load
    self.loaded_app = import_from_string(self.app)
                      ~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\site-packages\uvicorn\importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
  File "C:\Users\sachi\AppData\Local\Programs\Python\Python313\Lib\importlib\__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 1022, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "C:\Users\sachi\OneDrive\Documents\ASTRONOVA\services\physics_engine\main.py", line 3
    '''\n\nfrom fastapi import FastAPI\nfrom services.physics_engine.routers import physics\nfrom astronova_core.logging import setup_logging\n\nsetup_logging("physics-engine-service")\n\napp = FastAPI(\n    title="Astronova Physics Engine Service",\n    description="Provides physics-informed metrics for solar flare forecasting.",\n    version="0.1.0"\n)\n\napp.include_router(physics.router)\n\n@app.get("/health")\nasync def health_check():\n    return {"status": "ok"}\n
                                                                                                                    ^
SyntaxError: unexpected character after line continuation character
